# roop

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  api-server.py  combine.py  cron-job.py  docker-compose.yml  dockerfile  nsfw_check.py  pyproject.toml  redis_queue_consumer.py  requirements-cpu-minimal.txt  requirements-cpu.txt  requirements-minimal.txt  requirements.txt
roop/: core.py  swap_worker.py  utilities.py
roop/processors/frame/: core.py
